# u8

./: .env.example  .gitignore  Dockerfile  Makefile  README.MD  poetry.toml  pyproject.toml  test.txt
automodeling/: __init__.py
automodeling/airflow/: utils.py
automodeling/airflow/dags/: __init__.py  main.py
automodeling/airflow/tasks/: __init__.py  all_to_graph.py  md_to_scenarios.py  pdf_to_md.py  pdf_to_text.py  text_to_ontology.py
automodeling/legacy/: Untitled.ipynb  apply_ontology.py  assemble_clauses.py  clean_md.py  combine_json.py  convert_lap_to_json.py  convert_page_to_snippet.py  convert_snippet_to_lap.py  get_graph.py  harmnize_lap.py  inject_ontology_to_snippet.py  llm.py  run.ipynb  run.py  simplify_toc.py  snippet_to_ontology.py
automodeling/tasks/pdf_to_md/: main.py  utils.py
automodeling/tasks/pdf_to_text/: main.py
automodeling/tasks/text_to_ontology/: main.py
automodeling/tasks/utils/: __init__.py  dataset.py  utils.py
automodeling/utils/: __init__.py  file_storage_layer.py  llm.py  s3.py
data/assets/md/: 4collumnWithTable.md  AXAStradaDE.md  AXAStradaEN.md  AXAStradaFR.md  AXAStradaIT.md  chubbTravel.md  motor_uk.md  onepageFR.md  testPage.md  travel.md  wedding_policy.md  wedding_policy2.md  (+1 more)
experiments/james/: langchain_arize.py  langfuse.py  langsmith_test.py  litellm_test.py  llmsherpa_layout_pdf_to_md.ipynb
experiments/legacy/: run.ipynb
experiments/paulo/: pdf_to_text.py
services/airflow/: docker-compose.yaml
services/airflow_helm/: local_k8s_setup.MD
services/example_opentelemetry_receiver/: main.py
(+23 files in other folders)
